<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movies_24"
        android:title="@string/movies" />

    <item
        android:id="@+id/tvShowsFragment"
        android:icon="@drawable/ic_tv_shows_24"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/celebritiesFragment"
        android:icon="@drawable/ic_actors_24"
        android:title="@string/celebrities" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/profile" />

</menu>